--- a/.github/workflows/get_aoc_input.yml
+++ b/.github/workflows/get_aoc_input.yml
@@ -2,9 +2,14 @@ name: Get Advent of Code Input
 
 on:
   schedule:
-    # Runs at 05:00 UTC every day in December
-    - cron: '0 5 * 12 *'
+    # Runs at 05:00 UTC every day from December 1st to December 25th
+    - cron: '0 5 1-25 12 *'
   workflow_dispatch:
+    inputs:
+      day:
+        description: 'Day of Advent of Code to fetch input for'
+        required: true
+        default: '1'
 
 jobs:
   get-input:
@@ -16,7 +21,7 @@ jobs:
 
     - name: Get Advent of Code input
       run: |
-        day=$(date +%-d)
+        day=${{ github.event.inputs.day }}
         year=$(date +%Y)
         mkdir -p day-$day
         curl -H "Cookie: session=${{ secrets.AOC_SESSION }}" \
