--- a/.github/workflows/get_aoc_input.yml
+++ b/.github/workflows/get_aoc_input.yml
@@ -40,4 +40,4 @@ jobs:
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add day-${{ steps.get_input.outputs.day }}/input.txt
         git commit -m "Add input for day ${{ steps.get_input.outputs.day }}"
-        git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git HEAD:main
+        git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git HEAD:main
