--- a/.github/workflows/get_aoc_input.yml
+++ b/.github/workflows/get_aoc_input.yml
@@ -33,12 +33,11 @@ jobs:
       run: cat day-${{ steps.get_input.outputs.day }}/input.txt
 
     - name: Commit and push input file
-      env:
-        GH_PAT: ${{ secrets.GH_PAT }}
-        EMAIL: ${{ secrets.EMAIL }}
-      run: |
-        git config --global user.name "${{ github.actor }}"
-        git config --global user.email "${EMAIL}"
-        git add day-${{ steps.get_input.outputs.day }}/input.txt
-        git commit -m "Add input for day ${{ steps.get_input.outputs.day }}"
-        git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git HEAD:main
+      uses: EndBug/add-and-commit@v9
+      with:
+        author_name: ${{ github.actor }}
+        author_email: ${{ secrets.EMAIL }}
+        message: "Add input for day ${{ steps.get_input.outputs.day }}"
+        add: "day-${{ steps.get_input.outputs.day }}/input.txt"
+        push: true
+        github_token: ${{ secrets.GITHUB_TOKEN }}
